--- a/blog/templates/blog/add_blog.html
+++ b/blog/templates/blog/add_blog.html
@@ -16,7 +16,6 @@
     <div class="row">
         <div class="col-12">
             <h2 class="text-center">Product Management</h2>
-
         </div>
         <div class="col-12 mt-3">
             <h3 class="text-center">Add a Blog</h3>
@@ -24,12 +23,13 @@
     </div>
     <div class="row mt-3">
         <div class="col-12 col-md-6 offset-md-3">
+            <!-- Add blog form -->
             <form action="{% url 'add_blog' %}" method="POST" class="form" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Create</button>
-                    <a href="{% url 'blogs' %}">
+                    <a href="{% url 'blogs' %}" aria-label="Link to cancel add product form">
                         <button class="btn btn-grey" type="button">Cancel</button>
                     </a>
                 </div>
@@ -37,6 +37,4 @@
         </div>
     </div>
 </div>
-
-
 {% endblock %}
