--- a/blog/templates/blog/edit_blog_comment.html
+++ b/blog/templates/blog/edit_blog_comment.html
@@ -4,9 +4,7 @@
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col">
-
-        </div>
+        <div class="col"></div>
     </div>
 </div>
 {% endblock %}
@@ -19,13 +17,14 @@
         </div>
     </div>
     <div class="row mt-3">
+        <!-- Edit blog comment form -->
         <div class="col-12 col-md-6 offset-md-3">
                 <form id="edit-comment" action="{% url 'edit_blog_comment' comment.id %}" method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <div class="text-center">
                         <button class="btn btn-blue" type="submit" >Update comment</button>
-                        <a href="{% url 'blog_detail' blog.id %}">
+                        <a href="{% url 'blog_detail' blog.id %}" aria-label="Link to cancel edit comment form">
                             <button class="btn btn-grey" type="button">Cancel</button>
                         </a>
                     </div>
@@ -33,6 +32,4 @@
         </div>
     </div>
 </div>
-
-
 {% endblock %}
