--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -4,9 +4,7 @@
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col">
-
-        </div>
+        <div class="col"></div>
     </div>
 </div>
 {% endblock %}
@@ -16,20 +14,20 @@
     <div class="row">
         <div class="col-12">
             <h2 class="text-center">Contact</h2>
-
         </div>
         <div class="col-12 mt-3">
             <p class="text-center">We look forward to hearing from you!</p>
         </div>
     </div>
     <div class="row mt-3">
+        <!-- Contact form -->
         <div class="col-12 col-md-6 offset-md-3">
             <form action="{% url 'contact' %}" method="POST" class="form">
                 {% csrf_token %}
                 {{ contact_form|crispy }}
                 <div class="text-center">
                     <button class="btn btn-blue" type="submit" >Send</button>
-                    <a href="{% url 'home' %}">
+                    <a href="{% url 'home' %}" aria-label="Link to go back to home page">
                         <button class="btn btn-grey" type="button">Cancel</button>
                     </a>
                 </div>
@@ -37,5 +35,4 @@
         </div>
     </div>
 </div>
-
 {% endblock %}
